--- a/docs/memoria-TFG/anexos/02_Analisis.tex
+++ b/docs/memoria-TFG/anexos/02_Analisis.tex
@@ -142,10 +142,16 @@ Así que para poder garantizar la calidad y la satisfacción de los usuarios ten
 
 \section{Diagrama de casos de uso}
 
-En esta sección se mostrarán los diagramas de casos de usos analizados. El análisis se ha dividido entre, por un lado, la navegación por los menús y por otro lado la simulación en sí. 
+En esta sección se mostrará el diagrama de casos de usos analizado. El diagrama de casos de uso se ha divido en dos partes porque es demasiado grande para ser visualizado correctamente en una solo imagen.
 
+\begin{figure}[H]
+	\centering\includegraphics[scale=0.35]{imagenes/casos-de-uso-1.png}
+	\caption{Diagrama de casos de uso parte 1}
+	\label{img:casosDeUso1}
+\end{figure}
 
-
-\section{Diagrama de casos de uso detallados}
-
-
+\begin{figure}[H]
+	\centering\includegraphics[scale=0.35]{imagenes/casos-de-uso-2.png}
+	\caption{Diagrama de casos de uso parte 2}
+	\label{img:casosDeUso2}
+\end{figure}
