--- a/docs/memoria-TFG/memoria-TFG-Slavcho-Ivanov.tex
+++ b/docs/memoria-TFG/memoria-TFG-Slavcho-Ivanov.tex
@@ -5,6 +5,7 @@
 \usepackage{cite}
 \usepackage{dirtree}
 \usepackage{enumerate} % enumerados
+\usepackage{multirow}
 \usepackage{listings}
 \usepackage{longtable}
 \usepackage{float}
