--- a/docs/memoria-TFG/memoria-TFG-Slavcho-Ivanov.tex
+++ b/docs/memoria-TFG/memoria-TFG-Slavcho-Ivanov.tex
@@ -37,7 +37,7 @@
 % ********************************************************************
 % Re-usable information
 % ********************************************************************
-\newcommand{\myTitle}{Desarrollo de un simulador de escenarios con usuarios móviles para la evaluación de algoritmos de recomendaciones}
+\newcommand{\myTitle}{Desarrollo de un simulador de escenarios con usuarios móviles para evaluar sistemas de recomendación}
 \newcommand{\myDegree}{GRADO EN INGENIERÍA INFORMÁTICA}
 \newcommand{\TFG}{TRABAJO FIN DE GRADO}
 \newcommand{\myName}{Slavcho Georgiev Ivanov}
