--- a/docs/memoria-TFG/capitulos/01_Introduccion.tex
+++ b/docs/memoria-TFG/capitulos/01_Introduccion.tex
@@ -62,9 +62,6 @@ Durante el desarrollo de este Trabajo Fin de Grado se han utilizado las siguient
        \item {\bfseries GitHub}: repositorio de código
        \item {\bfseries Cmder}: emulador cmd de Windows 
        \item {\bfseries Sublime text 2}: editor de texto avanzado
-       \item {\bfseries CityEngine 2014}: software de modelado de ciudades
-       \item {\bfseries Unity 5}: motor gráfico para la creación de videojuegos
-       \item {\bfseries OSM2Word}: visualizador de datos con formato OSM
 \end{itemize}
 
 \noindent{\textbf{Herramienta de documentación}}\\
@@ -90,6 +87,7 @@ El contenido de la memoria está distribuido de la siguiente forma:
 
 \begin{itemize}
        \item En el capítulo 2 se expone el trabajo desarrollado para la elaboración de este simulador
-       \item En el capítulo 3 se expone la gestión del proyecto y las distintas etapas por las que ha pasado este proyecto
-       \item En el capítulo 4 se muestran las conclusiones del proyecto y el posible trabajo futuro de cara a mejorar el simulador 
+       \item En el capítulo 3 se expone la posible explotación del simulador de escenarios. También se muestra el rendimiento obtenido por el simulador.
+       \item En el capítulo 4 se expone la gestión del proyecto y las distintas etapas por las que ha pasado este proyecto
+       \item En el capítulo 5 se muestran las conclusiones del proyecto y el posible trabajo futuro de cara a mejorar el simulador 
 \end{itemize}
