--- a/docs/memoria-TFG/capitulos/02_TrabajoDesarrollado.tex
+++ b/docs/memoria-TFG/capitulos/02_TrabajoDesarrollado.tex
@@ -257,6 +257,7 @@ Como en todas las aplicaciones, el simulador de escenarios cuenta con un sistema
 \begin{itemize}
 	\item busqueda y gestión (creación, edición y borrados) de mapas y escenas
 	\item simulación de un mapa y escena
+	\item evaluación de un sistema de recomendación
 	\item gestión de tipos de recomendadores, objetos estáticos\footnote{objetos que no cambian de posición a medida que pasa el tiempo} y dinámicos\footnote{objetos que cambian de posición a medida que pasa el tiempo. Tienen una ruta definida durante la creación de la escena}
 	\item configuraciones del perfil del usuario
 \end{itemize} 
