--- a/docs/memoria-TFG/capitulos/03_Explotacion.tex
+++ b/docs/memoria-TFG/capitulos/03_Explotacion.tex
@@ -1,10 +1,10 @@
 \chapter{Explotación}
 
-En este capítulo se expone la explotación del simulador de escenarios como método para la evaluación de algoritmos de recomendaciones, se expone el trabajo realizado para permitirlo y el rendimiento obtenido del simulador.
+En este capítulo se expone la explotación del simulador de escenarios como método para la evaluación de sistemas de recomendaciones, se expone el trabajo realizado para permitirlo y el rendimiento obtenido del simulador.
 
 \section{Motivación}
 
-Debido a la gran cantidad de información resulta difícil para los usuarios elegir entre todas las alternativas existentes en los resultados mostrados. Por ello, para facilitar la elección se utilizan los llamados sistemas de recomendación. Estos sistemas resultan de gran interés para las empresas desde punto de vista económico, ya que hacen llegar a sus cliente recomendaciones de productos relevantes para ellos. Ademas, también resultan de interés para los usuarios ya que actúan como filtro y les ofrecen información personalizada que les resulta de interés.
+Debido a la gran cantidad de información resulta difícil para los usuarios elegir entre todas las alternativas existentes en los resultados mostrados por un sistema. Por ello, para facilitar la elección se utilizan los llamados sistemas de recomendación. Estos sistemas resultan de gran interés para las empresas desde punto de vista económico, ya que hacen llegar a sus cliente recomendaciones de productos relevantes para ellos. Ademas, también resultan de interés para los usuarios ya que actúan como filtro y les ofrecen información personalizada que les resulta de interés.
 
 No obstante, el diseño de sistemas de recomendación se enfrenta a problema como el arranque en frió (cold
 start problem) o el problema de opiniones artificiales o manipuladas (spam). Esto conlleva que el sistema de recomendación muestra información no relevante para el usuario y este dejará de confiar en él y abandonarlo. 
@@ -17,6 +17,7 @@ Por esto surge la necesidad de que los sistemas de recomendaciones puedan evalua
 
 
 \section{Evaluación de un sistema de recomendación}
+
 
 
 \section{Rendimiento}
